# deep-learning-cancer-classifier

./: .gitignore  Makefile  README.md  main.ipynb  pyproject.toml  results_ViT_diff_head_cls_model.json  results_ViT_diff_head_mlp_over_rep.json  results_ViT_ref_book.json  results_Vit_diff_head_no_cls_model.json  results_cnn.json  run_cluster.sh  slurm_script.sbatch
.virtual_documents/notebooks/: 1.00-ay-CNN-model.ipynb  1.01-hb-CNN-model.ipynb
cancer_classifier/: __init__.py  config.py  dataset.py  features.py  plots.py
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 0.00-ay-process-data.ipynb  00-ra-exploratory_data_analysis.ipynb  1.00-ay-CNN-model.ipynb  1.00-ay-ViT-model.ipynb  1.00-ra-ViT-model.ipynb  1.01-hb-CNN-model.ipynb  1.02-hb-CNN-model copy.ipynb  1.10-ay-ViT-edited-model.ipynb  1.20-ay-ViT-no-cls-model.ipynb  1.30-ay-ViT-no-cls-FC-not-cnn-embeding-model copy.ipynb  1.40-ay-ViT-diff-FC-per-head-MLP-all-Repi-model.ipynb  2.00-ay-CNN-model-cropped_img.ipynb  2.00-ay-CNN-model.ipynb  2.00-ay-ViT-ref-book-model-cropped_img.ipynb  2.10-ay-CNN-cropped-images-model.ipynb  2.11-hb-CNN-model.ipynb  2.20-ay-ViT-diff-FC-per-head-model.ipynb  2.30-ay-ViT-no-cls-model.ipynb  2.31-ay-ViT-no-cls-no-CLAHE-model.ipynb  2.40-ay-ViT-diff-FC-per-head-MLP-all-Repi-model.ipynb  2.41-ay-ViT-diff-FC-per-head-MLP-all-Repi-model.ipynb  3.00-ay-CNN-model.ipynb  3.00-ay-ViT-diff-FC-per-head-MLP-all-Repi-model.ipynb
ramzan_tests/: Untitled.ipynb  test.py  test2.py  train.py
recommendor/: __init__.py  dataset.py  features.py  plots.py
reports/: notes.txt  report.tex
(+14 files in other folders)
