[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cancer_classifier"
version = "0.0.1"
description = "this DL model classifies the type of cancer in MRI brain images"
authors = [
  { name = "ayoub, hiba, ramzan" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "==3.11.11"


[tool.ruff]
line-length = 99
src = ["cancer_classifier"]
include = ["pyproject.toml", "cancer_classifier/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["cancer_classifier"]
force-sort-within-sections = true

